Colaboratory を使用して作成しました

--- a/2019-progress-bar.ipynb
+++ b/2019-progress-bar.ipynb
@@ -1,27 +1,42 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# setting"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "2019-progress-bar.ipynb",
+      "version": "0.3.2",
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n"
-   ]
-  }
- ],
- "metadata": {},
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ddnLHr7x0tH3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import datetime\n",
+        "\n",
+        "\n",
+        "now = datetime.datetime.now()\n",
+        "\n",
+        "start = datetime.date(now.year, 1, 1)\n",
+        "end = datetime.date(now.year, 12, 31)\n",
+        "today = datetime.date.today()\n",
+        "\n",
+        "elapsed_days = int((today-start).days)+1\n",
+        "num_days_1year = int((end-start).days)+1\n",
+        "\n",
+        "print (\"2019 is \"+ str(int(100*elapsed_days/num_days_1year)) +\" % complete.\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
