Colaboratory を使用して作成しました

--- a/2019-progress-bar.ipynb
+++ b/2019-progress-bar.ipynb
@@ -16,16 +16,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ddnLHr7x0tH3",
+        "id": "HaAY6XMJ1P8_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b452c0ef-0cd2-4a93-881c-baca30d54f1b"
+      },
+      "source": [
+        "import datetime\n",
+        "print (str(datetime.datetime.now().year)+ \" is \" + str(int(100*(int((datetime.date.today()-datetime.date(datetime.datetime.now().year, 1, 1)).days)+1)/ (int((  datetime.date(datetime.datetime.now().year, 12, 31) - datetime.date(now.year, 1, 1) ).days)+1) ) ) +\" % complete.\")"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2019 is 39 % complete.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E0qcC_-g22kY",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "import datetime\n",
         "\n",
-        "\n",
         "now = datetime.datetime.now()\n",
-        "\n",
         "start = datetime.date(now.year, 1, 1)\n",
         "end = datetime.date(now.year, 12, 31)\n",
         "today = datetime.date.today()\n",
@@ -33,7 +57,7 @@
         "elapsed_days = int((today-start).days)+1\n",
         "num_days_1year = int((end-start).days)+1\n",
         "\n",
-        "print (\"2019 is \"+ str(int(100*elapsed_days/num_days_1year)) +\" % complete.\")"
+        "print (str(now.year)+ \" is \" + str(int(100*elapsed_days/num_days_1year)) +\" % complete.\")"
       ],
       "execution_count": 0,
       "outputs": []
